# backend/src/controllers/move.controller.ts
@@ -1,6 +1,5 @@
 import {
     Controller,
-    Get,
     Post,
     Route,
     Body,
@@ -9,18 +8,30 @@ import {
 
 import { MoveInputDTO, MoveOutputDTO } from "../dto/move.dto";
 import { moveService } from "../services/move.service";
+import Move from "../models/move.model";
+import {Error} from "sequelize";
 
 @Route("moves")
 @Tags("Moves")
 export class MoveController extends Controller {
-    @Get("/")
-    public async getAllMoves(): Promise<MoveOutputDTO[]> {
-        return moveService.getAllMoves();
-    }
 
     @Post("/")
     public async makeMove(@Body() requestBody: MoveInputDTO): Promise<MoveOutputDTO> {
-        const { gameId, from, to, playerColor } = requestBody;
-        return moveService.makeMove(gameId, from, to, playerColor);
+        const { gameId, fromRow, fromCol, toRow, toCol, playerColor } = requestBody;
+
+
+        const move = Move.createTemporaryMove({
+            gameId,
+            fromRow,
+            fromCol,
+            toRow,
+            toCol,
+            playerId: 0,
+            createdAt: new Date(),
+        });
+
+        // Appel du service
+        return moveService.makeMove(gameId, move, playerColor);
+
     }
 }
